# networker-tester

./: .gitignore  .impeccable.md  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Directory.Build.props  Network.sln  Networker.sln  README.md  azure-pipelines.yml  config.json  deploy-6ep-bench.json  deploy-azure-east-ubuntu-windows.json  deploy-test-3cloud.json  deploy.example.json  dev.sh  docker-compose.dashboard.yml  docker-compose.db.yml  id_ed25519.pub  install.ps1  install.sh  networker-cloud.json  networker-tester.sln  paper-like-real-server.json  test-all.sh  tester.example.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
assets/: report.css
benchmarks/: .gitignore  README.md  local-test.sh  results-78cc2352-36d0-41be-9939-b9cf2054e30c.json  sample-benchmark.json
benchmarks/metrics-agent/: Cargo.toml
benchmarks/metrics-agent/src/: main.rs
benchmarks/orchestrator/: Cargo.toml
benchmarks/orchestrator/src/: callback.rs  collector.rs  config.rs  cost.rs  deployer.rs  executor.rs  main.rs  progress.rs  provisioner.rs  reaper.rs  reporter.rs  runner.rs  ssh.rs  tester_state.rs  token_manager.rs  types.rs  validator.rs  vm_tiers.rs  workloads.rs
benchmarks/orchestrator/src/executor/: benchmark.rs  cycle.rs  mod.rs  ssh_exec.rs  status.rs  vm.rs
benchmarks/orchestrator/src/reporter/: assembly.rs  charts.rs  comparison.rs  html.rs  mod.rs  stats.rs  tests.rs  text.rs
benchmarks/reference-apis/cpp/: CMakeLists.txt  Dockerfile  README.md  build.sh  deploy.sh  server.cpp
crates/networker-agent/: Cargo.toml
crates/networker-agent/src/: config.rs  executor.rs  heartbeat.rs  main.rs  ws_client.rs
crates/networker-agent/src/commands/: README.md  health.rs  mod.rs
crates/networker-common/: Cargo.toml
crates/networker-common/src/: lib.rs  messages.rs  phase.rs  protocol.rs  test_config.rs  tester_messages.rs
crates/networker-dashboard/: Cargo.toml
crates/networker-dashboard/bootstrap/: reset-pre-prod.sql
crates/networker-dashboard/src/: agent_dispatch.rs  agent_reaper.rs  benchmark_worker.rs  config.rs  config_error.html  crypto.rs  email.rs  lib.rs  log_buffer.rs  main.rs  project_id.rs  provisioning.rs  regression.rs  scheduler.rs  system_metrics.rs
crates/networker-dashboard/src/api/: admin.rs  agent_commands.rs  agents.rs  auth.rs  bench_tokens.rs  benchmark_callbacks.rs  benchmark_catalog.rs  benchmark_configs.rs  benchmarks.rs  cloud.rs  cloud_accounts.rs  cloud_connections.rs  command_approvals.rs  comparison_groups.rs  dashboard.rs  deployments.rs  events.rs  inventory.rs  invites.rs  jobs.rs  leaderboard.rs  logs.rs  member_import.rs  mod.rs  modes.rs  pending_projects.rs  perf_log.rs  project_members.rs  projects.rs  runs.rs  schedules.rs  share_links.rs  sso_admin.rs  system_health.rs  test_configs.rs  test_runs.rs  tester_precheck.rs  testers.rs  tls_profiles.rs  update.rs  (+6 more)
crates/networker-dashboard/src/auth/: commands.rs  mod.rs
crates/networker-dashboard/src/db/: agent_commands.rs  agents.rs  benchmark_artifacts.rs  benchmark_cells.rs  benchmark_configs.rs  benchmark_log.rs  benchmark_presets.rs  benchmark_progress.rs  benchmark_testbeds.rs  benchmark_vm_catalog.rs  benchmarks.rs  cloud_accounts.rs  cloud_connections.rs  command_approvals.rs  comparison_groups.rs  deployments.rs  invites.rs  jobs.rs  migrations.rs  mod.rs  perf_log.rs  project_testers.rs  projects.rs  runs.rs  schedules.rs  share_links.rs  sso.rs  sso_providers.rs  system_health.rs  test_configs.rs  test_runs.rs  test_schedules.rs  tls_profiles.rs  url_tests.rs  users.rs  visibility.rs  vm_lifecycle.rs  workspace_warnings.rs  zones.rs
crates/networker-dashboard/src/deploy/: agent_provisioner.rs  mod.rs  runner.rs
crates/networker-dashboard/src/services/: azure_regions.rs  azure_vm.rs  cloud_init.rs  cloud_orphan_reaper.rs  cloud_provider.rs  event_bus.rs  mod.rs  tester_dispatcher.rs  tester_install.rs  tester_queue_hub.rs  tester_recovery.rs  tester_scheduler.rs  tester_state.rs  version_refresh.rs  vm_lifecycle_recorder.rs
crates/networker-dashboard/src/ws/: agent_hub.rs  browser_hub.rs  mod.rs  tester_hub.rs
crates/networker-endpoint/: Cargo.toml
crates/networker-endpoint/src/: http3_server.rs  lib.rs  main.rs  routes.rs  udp_echo.rs  udp_throughput.rs
crates/networker-endpoint/tests/: canonical_checksums.rs
crates/networker-log/: Cargo.toml
crates/networker-log/src/: batch.rs  builder.rs  db_layer.rs  lib.rs  metrics.rs  query.rs  schema.rs  types.rs
crates/networker-log/tests/: integration.rs
crates/networker-tester/: Cargo.toml
crates/networker-tester/src/: baseline.rs  benchmark.rs  capture.rs  cli.rs  dispatch.rs  lib.rs  main.rs  main_tests.rs  metrics.rs  modes_manifest_guard.rs  progress.rs  summary.rs  target_runner.rs  tls_profile.rs  tls_profile_cli.rs  url_diagnostic.rs  url_test_cli.rs
crates/networker-tester/src/output/: excel.rs  html.rs  json.rs  mod.rs  sql.rs
crates/networker-tester/src/output/db/: mod.rs  mssql.rs  postgres.rs  test_fixtures.rs
crates/networker-tester/src/output/html/: charts.rs  mod.rs  protocol_sections.rs  render_multi.rs  run_sections.rs  tables.rs
crates/networker-tester/src/output/html/tests/: mod.rs  render_detail_tests.rs  section_tests.rs  single_run_tests.rs
crates/networker-tester/src/runner/: browser.rs  curl.rs  dns.rs  http.rs  http3.rs  mod.rs  native.rs  pageload.rs  rpm.rs  socket_info.rs  throughput.rs  tls.rs  udp.rs  udp_throughput.rs
crates/networker-tester/tests/: html_snapshot.rs  integration.rs  json_contract.rs
docs/: README.md  (+23 more)
sdk/python/: pyproject.toml
sdk/python/example/: README.md  app.py
sdk/python/src/laghound/: __init__.py  _asgi.py  _core.py  _marks.py  _wsgi.py
sdk/python/tests/: harness.py  test_conformance.py  test_memory_bound.py
sdk/rust/: .gitignore  Cargo.toml  README.md
sdk/rust/example/: Cargo.toml
sdk/rust/example/src/: main.rs
sdk/rust/src/: axum_router.rs  body.rs  config.rs  error.rs  lib.rs  limits.rs  resp.rs  service.rs  state.rs  timing.rs
sdk/rust/tests/: conformance.rs  killswitch.rs  safety.rs
(+970 files in other folders)
