[workspace]
members = [
    "crates/networker-tester",
    "crates/networker-endpoint",
    "crates/networker-common",
    "crates/networker-dashboard",
    "crates/networker-agent",
]
resolver = "2"

[workspace.package]
version     = "0.13.21"
edition     = "2021"
authors     = ["NetworkerTester Contributors"]
license     = "MIT"

[workspace.dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
clap         = { version = "4",    features = ["derive", "env"] }
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono       = { version = "0.4",  features = ["serde"] }
uuid         = { version = "1",    features = ["v4", "serde"] }
bytes        = "1"
url          = "2"
rust_xlsxwriter = "0.93"
cpu-time         = "1"
