[workspace]
members = [
    "crates/networker-tester",
    "crates/networker-endpoint",
    "crates/networker-common",
    "crates/networker-dashboard",
    "crates/networker-agent",
    "crates/networker-log",
]
resolver = "2"
exclude = ["benchmarks/orchestrator", "benchmarks/metrics-agent"]

[workspace.package]
version     = "0.25.0"
edition     = "2021"
authors     = ["NetworkerTester Contributors"]
license     = "MIT"

[workspace.dependencies]
tokio        = { version = "1",    features = ["full"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
clap         = { version = "4",    features = ["derive", "env"] }
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono       = { version = "0.4",  features = ["serde"] }
uuid         = { version = "1",    features = ["v4", "serde"] }
bytes        = "1"
url          = "2"
rust_xlsxwriter = "0.94"
cpu-time         = "1"
