[package]
name = "alethabench-metrics-agent"
version = "0.1.0"
edition = "2021"
description = "AletheBench — lightweight server-side metrics collection agent"

[[bin]]
name = "metrics-agent"
path = "src/main.rs"

[dependencies]
axum         = "0.8"
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sysinfo      = "0.38"

[dev-dependencies]
http-body-util = "0.1"
tower          = { version = "0.5", features = ["util"] }
