[package]
name = "alethabench-orchestrator"
version = "0.1.0"
edition = "2021"
description = "AletheBench — network API benchmark orchestrator"

[[bin]]
name = "alethabench"
path = "src/main.rs"

[dependencies]
clap         = { version = "4", features = ["derive", "env"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1", features = ["v4", "serde"] }
rand         = "0.10"
tracing      = "0.1"
networker-log      = { path = "../../crates/networker-log" }
reqwest            = { version = "0.13", features = ["rustls", "json", "http2"], default-features = false }
