[package]
name = "networker-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for networker dashboard ↔ agent protocol"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
networker-tester = { path = "../networker-tester", default-features = false }
