[package]
name = "networker-dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Control plane API server for networker dashboard"

[dependencies]
# Workspace deps
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# Local deps
networker-common = { path = "../networker-common" }
networker-tester = { path = "../networker-tester", default-features = false, features = ["db-postgres"] }

# Web framework
axum        = { version = "0.7", features = ["macros", "ws"] }
tower-http  = { version = "0.6", features = ["trace", "cors", "fs"] }

# Database
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = { version = "0.14", features = ["serde"] }

# Auth
jsonwebtoken = "9"
bcrypt       = "0.19"

# HTTP client (for endpoint health checks / info fetches)
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls       = { version = "0.23", default-features = false, features = ["ring"] }

# Cron scheduling
cron         = "0.13"

# Email (password reset)
lettre       = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Crypto
sha2         = "0.10"

# JWT payload decoding (SSO id_token)
base64       = "0.22"

# Utilities
rand         = "0.8"
futures      = "0.3"
rpassword    = "7"
regex        = "1"
hostname     = "0.4"
url          = { workspace = true }
libc         = "0.2"
