[package]
name    = "networker-endpoint"
version.workspace = true
edition.workspace = true

[lib]
name = "networker_endpoint"
path = "src/lib.rs"

[[bin]]
name = "networker-endpoint"
path = "src/main.rs"

[features]
default = ["http3"]
http3   = ["quinn", "h3", "h3-quinn"]

[dependencies]
# --- async runtime ---
tokio.workspace = true

# --- HTTP server ---
axum            = { version = "0.8", features = ["macros"] }
axum-server     = { version = "0.8", features = ["tls-rustls"] }
http-body-util  = "0.1"
tower           = { version = "0.5" }
tower-http      = { version = "0.6", features = ["trace", "timeout", "cors"] }

# --- TLS ---
rustls         = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls   = "0.26"

# --- cert generation (self-signed for dev) ---
rcgen = "0.14"

http     = "1"
futures  = "0.3"

# --- HTTP/3 / QUIC (optional feature, on by default) ---
quinn    = { version = "0.11",    optional = true }
h3       = { version = "0.0.8",  optional = true }
h3-quinn = { version = "0.0.10", optional = true }

# --- shared workspace ---
serde.workspace       = true
serde_json.workspace  = true
clap.workspace        = true
anyhow.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true

# --- structured logging ---
networker-log = { path = "../networker-log" }
chrono.workspace      = true
bytes.workspace       = true

# --- JSON API benchmark endpoints ---
sha2       = "0.11"
hex        = "0.4"
flate2     = "1"
crc32fast  = "1"
rand       = "0.10"
regex      = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile   = "3"
