[package]
name    = "networker-tester"
version.workspace = true
edition.workspace = true

[lib]
name = "networker_tester"
path = "src/lib.rs"

[[bin]]
name = "networker-tester"
path = "src/main.rs"

[dependencies]
# --- async runtime ---
tokio.workspace = true

# --- HTTP (hyper 1.x with direct connection management for timing) ---
hyper        = { version = "1",    features = ["client", "http1", "http2"] }
hyper-util   = { version = "0.1",  features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1"
http         = "1"

# --- TLS ---
rustls               = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls         = "0.26"
rustls-native-certs  = "0.8"
rustls-pemfile       = "2"
webpki-roots         = "1"

# --- DNS ---
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }

# --- HTTP/3 (optional feature) ---
quinn    = { version = "0.11",    optional = true }
h3       = { version = "0.0.8",  optional = true }
h3-quinn = { version = "0.0.10", optional = true }

# --- native-TLS (optional feature) ---
native-tls       = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

# --- Headless browser (optional feature) ---
chromiumoxide = { version = "0.9", optional = true }
sha2          = { version = "0.10" }
base64        = { version = "0.22", optional = true }

# --- SQL Server (optional) ---
tiberius     = { version = "0.12", default-features = false, features = ["rustls", "chrono", "sql-browser-tokio"], optional = true }
tokio-util   = { version = "0.7",  features = ["compat"], optional = true }

# --- PostgreSQL (optional) ---
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"], optional = true }

# --- Trait ---
async-trait = "0.1"

# --- shared workspace ---
serde.workspace       = true
serde_json.workspace  = true
clap.workspace        = true
anyhow.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
chrono.workspace      = true
uuid.workspace        = true
bytes.workspace       = true
url.workspace         = true

# --- cert parsing ---
x509-parser = "0.18"

# --- Excel output ---
rust_xlsxwriter.workspace = true

# --- CPU timing ---
cpu-time.workspace = true

# --- utilities ---
futures  = "0.3"
libc     = "0.2"
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["http3", "db-mssql", "browser"]
http3   = ["quinn", "h3", "h3-quinn"]
native  = ["dep:native-tls", "dep:tokio-native-tls"]
browser = ["dep:chromiumoxide", "dep:base64"]
db-mssql    = ["dep:tiberius", "dep:tokio-util"]
db-postgres = ["dep:tokio-postgres"]

[dev-dependencies]
tempfile    = "3"
rcgen       = "0.14"
networker-endpoint = { path = "../networker-endpoint" }
